added link to github.io

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <p>
             <small>Talk by <a href="mailto:marco.mariani@alterway.fr">Marco Mariani</a> - <a href="http://alterway.fr">R&D @ Alter Way</a></small>
           </p>
+          <a href="http://mmariani.github.io/poss2016-aiohttp">http://mmariani.github.io/poss2016-aiohttp</a>
         </section>
 
         <section>
